--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "react": "17.0.2",
-    "react-native": "0.66.1"
+    "react-native": "0.66.1",
+    "react-native-calendars": "^1.1268.0",
+    "react-native-paper": "^4.10.0"
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
